2005-03-22  Laurent Sansonetti  <lrz@gnome.org>

	* AUTHORS,
	  lib/alexandria.rb:

	Added Rene.

2005-03-22  Rene Samselnig  <sandman@sdm-net.org> 

	* lib/alexandria/book_providers/amadeus.rb:

	Added amadeusbuch.at provider.
	
	* lib/alexandria/book_providers.rb,
	  schemas/alexandria.schemas:

	Follow latest change.

2005-03-22  Dafydd Harries  <daf@muse.19inch.net>

	* po/genpot.sh:

	Add a comment mentioning that the script needs to be run inside the
	po/ directory.

2005-03-22  Dafydd Harries  <daf@muse.19inch.net>

	* README:

	Update with the URL of the newly created intltool webpage.

2005-03-21  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers.rb:

	Be more intelligent when building the list of providers by taking into
	account nil values from the GConf schema.

	* data/alexandria/COPYING:

	Removed.

	* lib/alexandria/ui/about_dialog.rb:

	Do not display the whole GPL text, just the header.

2005-03-20  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/library.rb (Library.move):

	Removes books with the same ident before adding them in the array.
	
	* lib/alexandria/ui/main_app.rb:

	- Display an confirmation message when trying to move a book into a
	  library that already has a book with the same ident ;
	- Properly setup the moves action after an import process.

2005-03-19  Mirko Maischberger  <mirko@lilik.it>

	* lib/alexandria.rb: Added myself as italian translator.
	
2005-03-19  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/book_properties_dialog.rb:

	- Do not save the book properties on destroy ;
	- Display an error message when trying to set an EAN/ISBN that is already
	  used by another book in the same library ;
	- Do not set the saved ident of the book here, let Library#save do it
	  in order to not duplicate entries.

	* lib/alexandria/ui/new_book_dialog_manual.rb:

	- Forgot to mark some translatable strings ;
	- Display an error message when trying to add a book with an EAN/ISBN 