@@ -20,20 +20,14 @@ module Alexandria
         attr_reader :name, :css_file, :preview_file, :pixmaps_directory
 
         def self.all
-            themes_dir = File.join(Alexandria::Config::DATA_DIR, "web-themes")
-            themes = []
-            Dir.entries(themes_dir).each do |file|
-                path = File.join(themes_dir, file)
-                next if !File.directory?(path) or file =~ /^\./
-                css_file = File.join(path, file + ".css")
-                preview_file = File.join(path, "preview.jpg")
-                [css_file, preview_file].each do |file|
-                    raise "#{file} not found" unless File.exists?(file)
-                end
-                themes << WebTheme.new(css_file, preview_file,
-                                       File.join(path, file, "pixmaps"))
-            end
-            return themes
+            themes_dir = [
+                # System dir
+                File.join(Alexandria::Config::DATA_DIR, "web-themes"),
+
+                # User dir
+                File.join(ENV['HOME'], '.alexandria', '.web-themes')
+            ]
+            themes_dir.map { |x| self.load(x) }.flatten
         end
 
         def has_pixmaps?
@@ -43,6 +37,26 @@ module Alexandria
         #######
         private
         #######
+
+        def self.load(themes_dir)
+            themes = []
+            if File.exists?(themes_dir)
+                Dir.entries(themes_dir).each do |file|
+                    path = File.join(themes_dir, file)
+                    next if !File.directory?(path) or file =~ /^\./
+                    css_file = File.join(path, file + ".css")
+                    preview_file = File.join(path, "preview.jpg")
+                    [css_file, preview_file].each do |file|
+                        raise "#{file} not found" unless File.exists?(file)
+                    end
+                    themes << WebTheme.new(css_file, preview_file,
+                                           File.join(path, file, "pixmaps"))
+                end 
+            else
+                FileUtils.mkdir_p(themes_dir)
+            end
+            return themes
+        end
 
         def initialize(css_file, preview_file, pixmaps_directory)
             @name = File.basename(css_file, ".css").capitalize
